fix visual bug in form sticking out and removed redundant comments

--- a/src/style.css
+++ b/src/style.css
@@ -236,7 +236,7 @@
     margin-right: 18px;
   }
   
-  @media (max-width: 1000px) {
+  @media (max-width: 1075px) {
     body {
       padding: 32px 48px;
     }
